# mini

./: .gitignore  LICENSE.txt  README.md  dune-project
docs/: AstPositions.html  BasicSetEquations.Make.html  BasicSetEquations.SetType.html  BasicSetEquations.html  Constraint.html  ConstraintPrettyPrinter.html  CoreAlgebra.RowLabel.html  CoreAlgebra.html  Env.html  Errors.html  InfiniteArray.html  IntRank.html  Mark.html  MiniAlgebra.html  MiniAst.html  MiniConstraintPrinter.html  MiniInfer.html  MiniKindInferencer.html  MiniPrettyPrinter.html  MiniSolver.html  MiniSyntacticAnalysis.html  MiniTypes.html  MiniTypingEnvironment.html  MiniTypingExceptions.html  Misc.StringMap.html  Misc.StringSet.html  Misc.html  MultiEquation.html  ParsingExceptions.html  Positions.html  PrettyPrinter.html  Print.html  Processing.html  Solver.SolverException.html  Solver.html  Unifier.html  UnionFind.html  code_MiniInfer.html  code_MiniTypes.html  code_MiniTypingEnvironment.html  (+17 more)
src/: dune
