(lang dune 2.9)
(name mini)
(version 1.0.0)
(generate_opam_files true)
(package
  (name mini)
  (synopsis "A prototypical language from the TAPL book")
  (description "\| This is an implementation of the theory presented in the
               "\| chapter 'The Essence of ML Type Inference' of the Types And
               "\| Programming Languages book. It is based on source code
               "\| written by François Pottier, Yann Régis-Gianas and Didier Rémy.
               )
  (authors "Sam Veraeck" "François Pottier" "Yann Régis-Gianas" "Didier Rémy")
  (source (gitlab boltlang/bolt-ocaml)))
